# CCG-EyeTrack

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/parse/: BCCWJ-EyeTrack.txt  Dundee.txt
src/: analyze.R  category.py  count.py  grammar.py  plot.R  reader.py  tree.py
